--- a/cloud-gateway.properties
+++ b/cloud-gateway.properties
@@ -1,10 +1,8 @@
 server.port=8080
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
-spring.cloud.gateway.routes[0].id=movies
-spring.cloud.gateway.routes[0].uri.=lb://movies
+spring.cloud.gateway.routes[0].id=cloud-movies
+spring.cloud.gateway.routes[0].uri.=lb://cloud-movies
 spring.cloud.gateway.routes[0].predicates[0]=Path=/movies/**
-spring.cloud.gateway.routes[1].id=ratings
-spring.cloud.gateway.routes[1].uri.=lb://ratings
-spring.cloud.gateway.routes[1].predicates[0]=Path=/ratings/**
+spring.cloud.gateway.routes[1].predicates[1]=Path=/ratings/**
 #spring.cloud.gateway.routes[0].filters[0]=RewritePath=/api/(?<path>.*), /$\{path}
