--- a/cloud-gateway.properties
+++ b/cloud-gateway.properties
@@ -5,4 +5,4 @@ spring.cloud.gateway.routes[0].id=cloud-movies
 spring.cloud.gateway.routes[0].uri.=lb://cloud-movies
 spring.cloud.gateway.routes[0].predicates[0]=Path=/movies/**
 spring.cloud.gateway.routes[0].predicates[1]=Path=/ratings/**
-#spring.cloud.gateway.routes[0].filters[0]=RewritePath=/api/(?<path>.*), /$\{path}
+spring.cloud.gateway.routes[0].filters[0]=RewritePath=/cloud-movies/(?<path>.*), /$\{path}
